<resources>
    <string name="app_name" translatable="false">Card By BIN</string>
    <string name="hint_for_enter_bin">Enter the first eight digits\nof a card number (BIN/IIN)</string>
    <string name="scheme_hint">SCHEME / NETWORK</string>
    <string name="brand_hint">BRAND</string>
    <string name="number_hint">CARD NUMBER</string>
    <string name="length_hint">length:</string>
    <string name="luhn_hint">Luhn algorithm:</string>
    <string name="type_hint">TYPE</string>
    <string name="prepaid_hint">PREPAID</string>
    <string name="country_hint">COUNTRY</string>
    <string name="latitude_hint">latitude:</string>
    <string name="longitude_hint">longitude:</string>
    <string name="get_card_info_button_text">Card information</string>
    <string name="bank_hint">BANK</string>
    <string name="empty_bin_field">BIN/IIN field can\'t be empty!</string>
    <string name="wrong_bin_length">BIN/IIN might contains only 8 digits!</string>
    <string name="error_loading">There\'s something wrong with the world today…\nBut you can try again</string>
    <string name="reset_loading">Reset</string>
    <string name="bank_name_hint">name:</string>
    <string name="bank_city_hint">, city:</string>
    <string name="bank_url_hint">url:</string>
    <string name="bank_phone_hint">phone:</string>
</resources>