<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/schemeHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/scheme_hint"
        />

    <TextView
        android:id="@+id/scheme"
        style="@style/Widget.AppTheme.CardText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/schemeHint"
        tools:srcCompat="@sample/card.json/scheme"
        />

    <TextView
        android:id="@+id/brandHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/scheme"
        android:hint="@string/brand_hint"
        />

    <TextView
        android:id="@+id/brand"
        style="@style/Widget.AppTheme.CardText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/brandHint"
        tools:srcCompat="@sample/card.json/brand"
        />

    <TextView
        android:id="@+id/numberHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/brand"
        android:hint="@string/number_hint"
        />

    <TextView
        android:id="@+id/lengthHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/length_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/numberHint"
        />

    <TextView
        android:id="@+id/length"
        style="@style/Widget.AppTheme.ShiftedCardText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:srcCompat="@sample/card.json/number/length"
        app:layout_constraintStart_toEndOf="@id/lengthHint"
        app:layout_constraintTop_toBottomOf="@id/numberHint"
        />

    <TextView
        android:id="@+id/luhnHint"
        style="@style/Widget.AppTheme.CardText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/luhn_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lengthHint"
        />

    <TextView
        android:id="@+id/luhn"
        style="@style/Widget.AppTheme.ShiftedCardText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:srcCompat="@sample/card.json/number/luhn"
        app:layout_constraintStart_toEndOf="@id/luhnHint"
        app:layout_constraintTop_toBottomOf="@id/lengthHint"
        />

</androidx.constraintlayout.widget.ConstraintLayout>