<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/bankHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/bank_hint"
        />

    <TextView
        android:id="@+id/bankNameHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/bank_name_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bankHint"
        />

    <TextView
        android:id="@+id/bankName"
        style="@style/Widget.AppTheme.ShiftedCardText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:srcCompat="@sample/card.json/bank/name"
        app:layout_constraintStart_toEndOf="@id/bankNameHint"
        app:layout_constraintTop_toBottomOf="@id/bankHint"
        />

    <TextView
        android:id="@+id/bankCityHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/bank_city_hint"
        app:layout_constraintStart_toEndOf="@id/bankName"
        app:layout_constraintTop_toBottomOf="@id/bankHint"
        />

    <TextView
        android:id="@+id/bankCity"
        style="@style/Widget.AppTheme.ShiftedCardText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:srcCompat="@sample/card.json/bank/city"
        app:layout_constraintStart_toEndOf="@id/bankCityHint"
        app:layout_constraintTop_toBottomOf="@id/bankHint"
        />

    <TextView
        android:id="@+id/bankUrlHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/bank_url_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bankNameHint"
        />

    <TextView
        android:id="@+id/bankUrl"
        style="@style/Widget.AppTheme.ShiftedCardText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        tools:srcCompat="@sample/card.json/bank/url"
        app:layout_constraintStart_toEndOf="@id/bankUrlHint"
        app:layout_constraintTop_toBottomOf="@id/bankNameHint"
        />

    <TextView
        android:id="@+id/bankPhoneHint"
        style="@style/Widget.AppTheme.CardText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/bank_phone_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bankUrlHint"
        />

    <TextView
        android:id="@+id/bankPhone"
        style="@style/Widget.AppTheme.ShiftedCardText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="phone"
        tools:srcCompat="@sample/card.json/bank/phone"
        app:layout_constraintStart_toEndOf="@id/bankPhoneHint"
        app:layout_constraintTop_toBottomOf="@id/bankUrlHint"
        />

</androidx.constraintlayout.widget.ConstraintLayout>