<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/typeHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/type_hint"
        />

    <TextView
        android:id="@+id/type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/typeHint"
        tools:srcCompat="@sample/card.json/type"
        />

    <TextView
        android:id="@+id/prepaidHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/type"
        android:hint="@string/prepaid_hint"
        />

    <TextView
        android:id="@+id/prepaid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/prepaidHint"
        tools:srcCompat="@sample/card.json/prepaid"
        />

    <TextView
        android:id="@+id/countryHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/prepaid"
        android:hint="@string/country_hint"
        />

    <LinearLayout
        android:id="@+id/countryGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/countryHint">

        <TextView
            android:id="@+id/countryFlag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/countryName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:srcCompat="@sample/card.json/country/name" />

    </LinearLayout>

    <TextView
        android:id="@+id/coordinates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/countryGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>